@@ -152,7 +152,7 @@ Disc(
     xi=1.99;
     EIGENVALCOND=EIGENVALCOND_GNOFFO;
   );
-  FVSplus(
+  FVSTVDplus(
     LIMITER=LIMITER_VANLEER;
     ACCURACY=ACCURACY_SECONDORDER;
     xi=1.99;
